--- a/Papers/index.html
+++ b/Papers/index.html
@@ -5,7 +5,7 @@
 <title>Papers</title>
 </head>
 <body>
-    <h1>我的第一个标题</h1>
-    <p>我的第一个段落。</p>
+    <h1>Index</h1>
+    <a href="Tannin1/paper.html">Tannins and their Influence on Health</a>
 </body>
 </html>
