--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
 <head>
 <meta charset="utf-8">
 <title>Papers</title>
+<script language="JavaScript">
+    while(true){
+        var password = "";
+        password = prompt('请输入口令:','');
+        if(password != '0320') {
+            alert("口令不正确");}
+        else{
+            break;}}
+</script>
 </head>
 <body>
     <h1>Information about Colibactin</h1>
