--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <h1>Information about Colibactin</h1>
-    <p>Textbooks</p>
+    <a href="Textbooks/index.html">Textbooks</a>
     <a href="Papers/index.html">Papers</a>
 </body>
 </html>
