--- a/Textbooks/ユーキャンの登録販売者/ユーキャンの登録販売者.html
+++ b/Textbooks/ユーキャンの登録販売者/ユーキャンの登録販売者.html
@@ -5,6 +5,15 @@
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="../../CSS/textbook_ユーキャン.css">
     <title>ユーキャンの登録販売者</title>
+    <script language="JavaScript">
+        while(true){
+            var password = "";
+            password = prompt('请输入口令:','');
+            if(password != '0320') {
+                alert("口令不正确");}
+            else{
+                break;}}
+    </script>
 </head>
 
 <body>
