--- a/Webpage/index.html
+++ b/Webpage/index.html
@@ -5,8 +5,9 @@
 <title>受託研究</title>
 </head>
 <body>
-    <h1>Information about Colibactin</h1>
-    <a href="Textbooks/index.html">Textbooks</a>
-    <a href="Papers/index.html">Papers</a>
+    <h3>コリバクチン関連</h3>
+    <a href="Colibactin/index.html">コリバクチン関連</a>
+    <a href="MolecularBiology/index.html">分子生物学関連</a>
+    <a href="NaturalProduct/index.html">天然化合物関連</a>
 </body>
 </html>
