--- a/Webpage/index.html
+++ b/Webpage/index.html
@@ -6,8 +6,12 @@
 </head>
 <body>
     <h3>コリバクチン関連</h3>
-    <a href="Colibactin/index.html">コリバクチン関連</a>
-    <a href="MolecularBiology/index.html">分子生物学関連</a>
-    <a href="NaturalProduct/index.html">天然化合物関連</a>
+    <a href="Colibactin/index.html">コリバクチン概説</a>
+    <a href="NaturalProduct/index.html">蛍光プローブで定性解析</a>
+    <a href="MolecularBiology/index.html">PCRで定性解析</a>
+    <a href="NaturalProduct/index.html">qPCRで定量解析</a>
+    <a href="NaturalProduct/index.html">LC/MSで定量解析</a>
+    <h3>分子生物学関連</h3>
+    <h3>天然化合物関連</h3>
 </body>
 </html>
