--- a/Webpage/index.html
+++ b/Webpage/index.html
@@ -6,10 +6,10 @@
 </head>
 <body>
     <h3>コリバクチン関連</h3>
-    <a href="Colibactin/index.html">コリバクチン概説</a>
-    <a href="NaturalProduct/index.html">蛍光プローブで定性解析</a>
-    <a href="MolecularBiology/index.html">PCRで定性解析</a>
-    <a href="NaturalProduct/index.html">qPCRで定量解析</a>
+    <a href="Colibactin/index.html">コリバクチン概説</a><br/>
+    <a href="NaturalProduct/index.html">蛍光プローブで定性解析</a><br/>
+    <a href="MolecularBiology/index.html">PCRで定性解析</a><br/>
+    <a href="NaturalProduct/index.html">qPCRで定量解析</a><br/>
     <a href="NaturalProduct/index.html">LC/MSで定量解析</a>
     <h3>分子生物学関連</h3>
     <h3>天然化合物関連</h3>
