--- a/Webpage/index.html
+++ b/Webpage/index.html
@@ -7,11 +7,18 @@
 <body>
     <h3>コリバクチン関連</h3>
     <a href="Colibactin/index.html">コリバクチン概説</a><br/>
-    <a href="NaturalProduct/index.html">蛍光プローブで定性解析</a><br/>
-    <a href="MolecularBiology/index.html">PCRで定性解析</a><br/>
-    <a href="NaturalProduct/index.html">qPCRで定量解析</a><br/>
-    <a href="NaturalProduct/index.html">LC/MSで定量解析</a>
+    <a href="Colibactin/C01.html">蛍光プローブで定性解析</a><br/>
+    <a href="Colibactin/C02.html">PCRで定性解析</a><br/>
+    <a href="Colibactin/C03.html">qPCRで定量解析</a><br/>
+    <a href="Colibactin/C04.html">LC/MSで定量解析</a>
     <h3>分子生物学関連</h3>
+    <a href="MolecularBiology/M01.html">DNA・RNAの抽出</a><br/>
+    <a href="MolecularBiology/M02.html">16S rRNA遺伝子・ITS領域による系統解析    </a><br/>
+    <a href="MolecularBiology/M03.html">タンパク質異種発現</a><br/>
+    <a href="MolecularBiology/M04.html">カビ遺伝子改変</a><br/>
     <h3>天然化合物関連</h3>
+    <a href="NaturalProduct/N01.html">微生物培養・抽出</a><br/>
+    <a href="NaturalProduct/N02.html">天然化合物精製</a><br/>
+    <a href="NaturalProduct/N03.html">構造決定</a><br/>
 </body>
 </html>
