--- a/Webpage/MolecularBiology/M01.html
+++ b/Webpage/MolecularBiology/M01.html
@@ -1,1 +1,17 @@
+<!DOCTYPE html>
+<html>
 
+<head>
+    <meta charset="utf-8">
+    <title>分子生物学関連</title>
+</head>
+
+<body>
+    <h3>DNA・RNAの抽出</h3>
+    <li>微生物の培養からも可能</li>
+    <li>微生物により抽出方法の検討可能</li>
+    <li>濃度測定・ナノドロップかQubit</li>
+    <li>環境サンプルからも可能</li>
+</body>
+
+</html>
