--- a/Webpage/Colibactin/C01.html
+++ b/Webpage/Colibactin/C01.html
@@ -1,1 +1,24 @@
+<!DOCTYPE html>
+<html>
 
+<head>
+    <meta charset="utf-8">
+    <title>コリバクチン関連</title>
+</head>
+
+<body>
+    <h3>蛍光プローブで定性解析</h3>
+    <p>コリバクチンは、一部の大腸菌（clb<sup>+</sup> gene clusterを保有する株）が産生する遺伝毒性物質です。この分子は、宿主細胞のDNAを損傷し、ゲノム不安定性や発癌のリスクを引き起こす可能性があります。そのため、コリバクチンの産生能力を評価することは、病原性研究やリスク評価において極めて重要です。当社は、この課題に対応するため、蛍光プローブを用いた簡便かつ高感度な検出技術を開発しました。</p>
+    <h4>蛍光検出の原理</h4>
+    <p>当社が開発した蛍光プローブ技術は、コリバクチンによる特異的な分子反応を利用して蛍光信号を発生させる仕組みです。蛍光プローブは、コリバクチン産生経路における特異的な酵素基質の構造を模倣しており、ClbP酵素による特異的な触媒反応を受けることで蛍光を発する物質を放出します。この特性を利用し、clb遺伝子陽性または陰性の定性評価に活用できます。</p>
+    <img src="fig01.png" alt="蛍光検出の原理" width="100%">
+    <h4>当社技術の優位性</h4>
+    <h5>高感度・高特異性</h5>
+    <p>本プローブは、コリバクチン生合成経路に基づいて設計されており、高い感度と特異性を実現しています。</p>
+    <h5>高効率な測定</h5>
+    <p>各サンプルの測定には約4日間の培養期間が必要ですが、マイクロプレートを用いることで多数のサンプルを同時に処理可能です。このため、他の方法と比較して最も高い効率を誇ります。</p>
+    <h5>大量サンプルの迅速な定性分析</h5>
+    <p>本技術は、大量のサンプルを対象とした迅速な定性分析に適しており、研究および応用の幅広いニーズに応えます。</p>
+</body>
+
+</html>
