--- a/Webpage/Colibactin/C01.html
+++ b/Webpage/Colibactin/C01.html
@@ -8,6 +8,7 @@
 
 <body>
     <h3>蛍光プローブで定性解析</h3>
+    <h4>概要</h4>
     <p>コリバクチンは、一部の大腸菌（clb<sup>+</sup> gene clusterを保有する株）が産生する遺伝毒性物質です。この分子は、宿主細胞のDNAを損傷し、ゲノム不安定性や発癌のリスクを引き起こす可能性があります。そのため、コリバクチンの産生能力を評価することは、病原性研究やリスク評価において極めて重要です。当社は、この課題に対応するため、蛍光プローブを用いた簡便かつ高感度な検出技術を開発しました。</p>
     <h4>蛍光検出の原理</h4>
     <p>当社が開発した蛍光プローブ技術は、コリバクチンによる特異的な分子反応を利用して蛍光信号を発生させる仕組みです。蛍光プローブは、コリバクチン産生経路における特異的な酵素基質の構造を模倣しており、ClbP酵素による特異的な触媒反応を受けることで蛍光を発する物質を放出します。この特性を利用し、clb遺伝子陽性または陰性の定性評価に活用できます。</p>
@@ -19,6 +20,15 @@
     <p>各サンプルの測定には約4日間の培養期間が必要ですが、マイクロプレートを用いることで多数のサンプルを同時に処理可能です。このため、他の方法と比較して最も高い効率を誇ります。</p>
     <h5>大量サンプルの迅速な定性分析</h5>
     <p>本技術は、大量のサンプルを対象とした迅速な定性分析に適しており、研究および応用の幅広いニーズに応えます。</p>
+    <h4>実験の流れ</h4>
+    <h5>サンプル準備</h5>
+    <p>お客様から送付いただいたサンプルを受領後、適切な前処理を実施します。サンプルの種類（生物検体、環境サンプルなど）に応じた処理が可能です。</p>
+    <h5>培養・蛍光プローブ測定</h5>
+    <p>蛍光プローブをサンプルに添加し、特定条件下でインキュベートします。蛍光測定装置を用いて信号を検出します。</p>
+    <h5>データ解析</h5>
+    <p>得られた蛍光信号を解析し、コリバクチン産生能力を評価します。結果は標準化されたフォーマットでレポート化されます。</p>
+    <h5>結果報告</h5>
+    <p>測定データと解析結果をお客様に提供します。必要に応じて、追加の解釈やサポートも行います。</p>
 </body>
 
 </html>
