--- a/Webpage/Colibactin/C01.html
+++ b/Webpage/Colibactin/C01.html
@@ -29,6 +29,8 @@
     <p>得られた蛍光信号を解析し、コリバクチン産生能力を評価します。結果は標準化されたフォーマットでレポート化されます。</p>
     <h5>結果報告</h5>
     <p>測定データと解析結果をお客様に提供します。必要に応じて、追加の解釈やサポートも行います。</p>
+    <h4>お問い合わせ</h4>
+    <p>この技術は、病原性微生物の研究や環境モニタリング、さらには医療応用にも活用可能です。詳細な情報やお見積もりについては、ぜひお気軽にお問い合わせください。</p>
 </body>
 
 </html>
