--- a/Webpage/Colibactin/C02.html
+++ b/Webpage/Colibactin/C02.html
@@ -24,8 +24,8 @@
     <p>専用プライマーを用いた蛍光PCR解析を実施し、clbBおよびclbP遺伝子の有無を定性評価します。</p>
     <h5>結果報告</h5>
     <p>測定結果を詳細なレポート形式で提供します。必要に応じて、追加のデータ解析や解釈サポートも行います。</p>
-    <h5></h5>
-    <p></p>
+    <h4>お問い合わせ</h4>
+    <p>当社のPCR定性解析サービスは、迅速な結果提供と高精度な解析により、研究やリスク評価における強力なサポートを提供します。詳細やお見積もりについては、お気軽にお問い合わせください。</p>
 </body>
 
 </html>
