--- a/Webpage/index.html
+++ b/Webpage/index.html
@@ -18,9 +18,7 @@
     <a href="MolecularBiology/M03.html">タンパク質異種発現</a><br />
     <a href="MolecularBiology/M04.html">カビ遺伝子改変</a><br />
     <h3>天然化合物関連</h3>
-    <a href="NaturalProduct/N01.html">微生物培養・抽出</a><br />
-    <a href="NaturalProduct/N02.html">天然化合物精製</a><br />
-    <a href="NaturalProduct/N03.html">構造決定</a><br />
+    <a href="NaturalProduct/N01.html">微生物由来天然化合物</a><br />
 </body>
 
 </html>
