--- a/Webpage/MolecularBiology/M02.html
+++ b/Webpage/MolecularBiology/M02.html
@@ -7,11 +7,46 @@
 </head>
 
 <body>
-    <h3>16S rRNA遺伝子・ITS領域による系統解析</h3>
-    <li>微生物細胞から実施も可能</li>
-    <li>各遺伝子を増幅し・配列の決定</li>
-    <li>系統樹作成</li>
-    <li>サンプルからの微生物単離も可能</li>
+    <h1>16S rRNA遺伝子・ITS領域による系統解析</h1>
+    <p>私たちの系統解析サービスは、16S rRNA遺伝子やITS領域を用いて微生物の同定・系統解析を行い、研究や開発のサポートを提供します。微生物の特定や系統樹の構築を高精度で実施し、多様な用途に対応します。</p>
+    <h2>サービスの特徴</h2>
+    <h3>微生物の同定と系統解析</h3>
+    <li>16S rRNA遺伝子解析: 細菌の分類・同定に最適なマーカー遺伝子を用いた解析。</li>
+    <li>ITS領域解析: 真菌類の系統解析に特化した分析が可能。</li>
+    <h3>微生物細胞からの解析が可能</h3>
+    <li>微生物細胞そのものをサンプルとして受け取り、核酸抽出から解析まで一貫して対応。</li>
+    <li>微生物の単離が必要な場合もサポート可能です。</li>
+    <h3>各遺伝子の増幅と配列決定</h3>
+    <p>高感度なPCR技術を用いて目的遺伝子を増幅し、精度の高いDNAシークエンシングで配列を決定します。</p>
+    <h3>系統樹の作成</h3>
+    <p>得られた配列をもとに、最適なアルゴリズムを用いて系統樹を構築。微生物の進化的関係を視覚的に解析します。</p>
+    <h3>環境サンプルからの微生物単離も対応</h3>
+    <p>土壌、水、食品などからの微生物単離を実施し、目的微生物の解析に必要な材料を準備します。</p>
+    <h2>サービスの流れ</h2>
+    <h3>サンプル受領</h3>
+    <p>微生物細胞、培養物、または環境サンプルをお預かりします。サンプル準備方法についてもアドバイス可能です。</p>
+    <h3>核酸抽出</h3>
+    <p>サンプルからDNAまたはRNAを抽出します。環境サンプルの場合は、高純度抽出を行います。</p>
+    <h3>PCRによる増幅</h3>
+    <p>16S rRNA遺伝子またはITS領域をターゲットとしたPCRを行い、目的領域を高感度で増幅します。</p>
+    <h3>配列決定</h3>
+    <p>Sangerシーケンスまたは次世代シーケンス（NGS）技術を用いて正確に配列を決定します。</p>
+    <h3>系統樹の作成</h3>
+    <p>配列データを基に、系統解析ソフトウェア（例: MEGA, RAxML）を用いて系統樹を作成します。</p>
+    <h3>結果の報告</h3>
+    <p>配列データ、解析結果、および系統樹をレポート形式で納品します。用途に応じた追加解析にも対応可能です。</p>
+    <h2>サービスのメリット</h2>
+    <li>高精度の微生物同定: 16S rRNA遺伝子やITS領域解析を用いた確実な同定。</li>
+    <li>包括的なサポート: サンプル準備から系統樹作成まで一貫して対応。</li>
+    <li>多様なサンプルに対応: 微生物培養物だけでなく、環境サンプルにも柔軟に対応可能。</li>
+    <li>柔軟なカスタマイズ: 解析条件や出力形式など、ご要望に応じたサービス提供。</li>
+    <h2>用途例</h2>
+    <li>未知の微生物の同定</li>
+    <li>生態系における微生物の多様性解析</li>
+    <li>食品や医薬品開発における微生物評価</li>
+    <li>環境サンプル中の特定微生物の追跡</li>
+    <h2>お問い合わせ</h2>
+    <p>16S rRNA遺伝子・ITS領域を用いた系統解析サービスに関するご相談や見積もり依頼は、お気軽にご連絡ください。迅速かつ的確にサポートいたします！</p>
 </body>
 
 </html>
