--- a/Webpage/MolecularBiology/M03.html
+++ b/Webpage/MolecularBiology/M03.html
@@ -7,12 +7,46 @@
 </head>
 
 <body>
-    <h3>タンパク質異種発現</h3>
-    <li>大腸菌や酵母を用いて異種発現</li>
-    <li>発現ベクターの構築（タグの付加可能：Hisタグ・MBPタグ）</li>
-    <li>アミノ酸変異（挿入・置換・欠損）タンパク質の作製も可能</li>
-    <li>発現遺伝子のコドン最適化</li>
-    <li>アフィニティ精製</li>
+    <h1>タンパク質異種発現</h1>
+    <h2>概要</h2>
+    <p>私たちのタンパク質異種発現サービスは、大腸菌や酵母を活用し、高品質なタンパク質を効率的に生産するためのプロセスを提供します。発現ベクターの設計からアミノ酸変異タンパク質の作製、精製まで一貫したサポートを行い、研究や製品開発を強力にバックアップします。</p>
+    <h2>サービスの特徴</h2>
+    <h3>多様な発現システムに対応</h3>
+    <li>大腸菌: 高効率でコストパフォーマンスに優れた発現が可能。</li>
+    <li>酵母: 真核生物特有の翻訳後修飾や複雑なタンパク質の発現に対応。</li>
+    <h3>発現ベクターのカスタマイズ</h3>
+    <li>タンパク質精製や検出を容易にするためのタグ付加が可能です。</li>
+    <li>Hisタグ: 金属アフィニティクロマトグラフィーに最適。</li>
+    <li>MBPタグ: タンパク質の可溶性向上やアミロース樹脂による精製に適応。</li>
+    <h3>アミノ酸変異タンパク質の作製</h3>
+    <li>アミノ酸の挿入、置換、欠損により、特定の機能や構造を持つ変異体を作製可能。</li>
+    <li>目的に応じた設計・解析を支援します。</li>
+    <h3>コドン最適化</h3>
+    <li>宿主細胞での発現効率を向上させるため、目的遺伝子のコドン使用を最適化します。</li>
+    <li>専用ツールを使用して迅速かつ正確に対応。</li>
+    <h3>高効率なアフィニティ精製</h3>
+    <li>タグを活用した高純度タンパク質の精製を提供。</li>
+    <li>精製後のタンパク質はSDS-PAGEや活性評価により品質を確認。</li>
+    <h2>サービスの流れ</h2>
+    <h3>発現戦略の立案</h3>
+    <p>目的タンパク質やプロジェクトの要件に基づき、最適な発現システムとベクター設計を提案します。</p>
+    <h3>発現ベクターの構築</h3>
+    <p>タンパク質タグの付加やアミノ酸変異を含むカスタマイズされたベクターを作製します。</p>
+    <h3>タンパク質発現</h3>
+    <p>大腸菌や酵母を用いて目的タンパク質を発現させ、条件を最適化します。</p>
+    <h3>タンパク質の精製</h3>
+    <p>アフィニティクロマトグラフィーなどの方法で高純度のタンパク質を回収します。</p>
+    <h3>品質評価</h3>
+    <p>精製したタンパク質の純度や機能をSDS-PAGE、ウエスタンブロット、または活性測定で評価。</p>
+    <h3>納品</h3>
+    <p>タンパク質サンプルおよび関連データを迅速に納品します。</p>
+    <h2>サービスのメリット</h2>
+    <li>柔軟なカスタマイズ: タンパク質の特性や研究ニーズに合わせた設計が可能。</li>
+    <li>高品質な生成物: 最適化されたプロセスにより、高収量かつ高純度のタンパク質を提供。</li>
+    <li>専門的なサポート: 経験豊富なスタッフによる技術アドバイスと結果解析。</li>
+    <li>多様な用途に対応: 基礎研究、薬剤スクリーニング、構造解析、抗体生成など幅広く応用可能。</li>
+    <h2>お問い合わせ</h2>
+    <p>タンパク質異種発現に関する詳細やカスタマイズについてのご相談は、ぜひお気軽にお問い合わせください。プロジェクト成功のため、最適な提案とサポートを提供いたします！</p>
 </body>
 
 </html>
