--- a/Webpage/MolecularBiology/M04.html
+++ b/Webpage/MolecularBiology/M04.html
@@ -7,9 +7,47 @@
 </head>
 
 <body>
-    <h3>カビ遺伝子改変</h3>
-    <li>特定遺伝子のノックアウト</li>
-    <li>複数の遺伝子も可能</li>
+    <h1>カビ遺伝子改変</h1>
+    <h2>概要</h2>
+    <p>私たちのカビ遺伝子改変サービスでは、カビ（例: <i>Aspergillus</i> spp., <i>Penicillium</i> spp., <i>Trichoderma</i> spp.など）を対象に、遺伝子改変技術を用いて研究や産業利用に役立つソリューションを提供します。特定遺伝子のノックアウトや複数遺伝子の改変にも対応し、お客様の目的に合わせた成果を迅速に実現します。</p>
+    <h2>サービスの特徴</h2>
+    <h3>特定遺伝子のノックアウト</h3>
+    <li>CRISPR-Cas9やホモログラスリコンビネーションを活用し、目的遺伝子を効率的にノックアウト。</li>
+    <li>特定機能を持つ遺伝子の除去や解析に最適です。</li>
+    <h3>複数遺伝子の改変が可能</h3>
+    <li>同時に複数遺伝子をターゲットとする改変（ノックアウト、ノックイン、置換など）にも対応。</li>
+    <li>複雑な代謝経路の再設計や改変に有用です。</li>
+    <h3>柔軟なカスタマイズ</h3>
+    <li>対象となるカビ種や遺伝子に応じたプロトコルの最適化を実施。</li>
+    <li>特殊な宿主や難改変種についても相談可能です。</li>
+    <h3>高効率のプロセス設計</h3>
+    <p>宿主遺伝子組み換え効率を高めるツールや技術を活用し、迅速かつ正確な改変を実現します。</p>
+    <h3>完全サポート体制</h3>
+    <li>遺伝子改変の設計から、改変株の作製、解析まで一貫して対応。</li>
+    <li>必要に応じて変異体の表現型解析や分子生物学的検証も提供可能。</li>
+    <h2>サービスの流れ</h2>
+    <h3>ご要望のヒアリング</h3>
+    <p>目的とする遺伝子やカビ種、改変の内容について詳細をお伺いします。</p>
+    <h3>プロジェクト設計</h3>
+    <p>最適な改変戦略を立案し、使用する技術や実験条件を提案します。</p>
+    <h3>遺伝子改変実験の実施</h3>
+    <p>選定した技術（例: CRISPR-Cas9）を用いて遺伝子改変を行います。</p>
+    <h3>改変株の検証</h3>
+    <p>PCR、シークエンス解析、表現型評価を通じて改変の成功を確認します。</p>
+    <h3>改変株の納品</h3>
+    <p>作製した改変株および関連データを納品し、必要に応じて追加解析もサポートします。</p>
+    <h2>サービスのメリット</h2>
+    <li>効率的な改変技術: CRISPR-Cas9などの最新技術を活用した高効率な遺伝子改変。</li>
+    <li>多様な改変対応: 単一遺伝子から複数遺伝子にわたる改変まで柔軟に対応。</li>
+    <li>専門的サポート: カビの特性に応じた最適化やプロトコル設計を提案。</li>
+    <li>研究から産業利用まで: 基礎研究、発酵生産、代謝工学など幅広い用途に対応可能。</li>
+    <h2>用途例</h2>
+    <li>カビ由来酵素の改良</li>
+    <li>代謝産物生産の向上（例: 有用化合物や二次代謝産物）</li>
+    <li>抗生物質やバイオアクティブ物質生産カビの改変</li>
+    <li>遺伝子機能の解析</li>
+    <h2>お問い合わせ</h2>
+    <p>カビ遺伝子改変サービスに関するご相談や詳細については、お気軽にお問い合わせください。専門的な技術力で、プロジェクトの成功を全力でサポートいたします！</p>
 </body>
 
 </html>
