--- a/Webpage/Colibactin/C02.html
+++ b/Webpage/Colibactin/C02.html
@@ -7,10 +7,10 @@
 </head>
 
 <body>
-    <h1>蛍光プローブで定性解析</h1>
+    <h1>PCRで定性解析</h1>
     <h2>概要</h2>
     <p>当社は、コリバクチン生合成経路に基づき、clbBおよびclbP遺伝子を標的とした専用プライマーを設計しました。この技術により、サンプル中のclb遺伝子陽性または陰性を迅速かつ正確に判定することが可能です。</p>
-    <h2>蛍光PCR解析の原理</h2>
+    <h2>PCR解析の原理</h2>
     <p>本解析では、PCRを利用して、標的遺伝子（clbBおよびclbP）の有無を検出します。専用設計されたプライマーと高感度な反応系により、わずかな遺伝子量でも確実に検出でき、false negativeを最小限に抑えます。この方法は、高い正確性を保ちながら、効率的な定性解析を実現します。</p>
     <h2>当社技術の優位性</h2>
     <h3>高感度・高精度</h3>
